# sound-demo

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: launch.json  settings.local.json
docs/: api_integration_ko.md  screen_notes_ko.md  threejs_notes_ko.md
scripts/: check-js-syntax.mjs  sb-organize.mjs  sb-record-gpt2.mjs
scripts/perf/: README.md  config.mjs  measure-api.mjs  measure-bundle.mjs  measure-web.mjs  report.mjs  run-all.mjs
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: applianceCommandApi.js  applianceMeasurementApi.js  authApi.js  client.js  deviceAgentApi.js  deviceApi.js  eventApi.js  notificationApi.js  reportApi.js  routineApi.js  settingsApi.js
src/components/: ConsentModal.js  DecibelBadge.js  DeviceCard.js  NotificationBanner.js  ReportCard.js  RoutineCard.js  StatusCard.js  brandMark.js  householdHeader.js  settingsTabs.js
src/data/: labelMapping.json  mockApplianceModuleTelemetry.json  mockHomeStatus.json
src/pages/: ApplianceModuleControlPage.js  CreateAccount.js  DataDeletConfirmationPoppup.js  DeviceAddPopup.js  DeviceConnectionFailurePopup.js  DeviceDetailPage.js  DeviceListPage.js  GPTConsentWithdrawalPopup.js  GPTDetailedReportPage.js  HomeDashboardPage.js  LoginPage.js  LowConfidenceNoticePopup.js  NotificationCenterPage.js  ProfilePage.js  ReactionHistoryPage.js  ReportPage.js  (+7 more)
tests/: applianceCommand.test.js  dashboardAnd3d.test.js  htmlEscaping.test.js  labelMapping.test.js
(+36 files in other folders)
