[package]
name = "soundcare_tauri_control_app"
version = "0.1.0"
description = "SoundCare Tauri ThinQ-style control app"
authors = ["SoundCare Team"]
edition = "2021"

[lib]
name = "soundcare_tauri_control_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
